新增往期紀錄

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <div class="header">
-    <h1>大樂透程式</h1>
+    <h1>湯姆熊大樂透</h1>
     <p>選號區間: 0 - 1000 (取 6 碼)</p>
-    <p id="round">第 1 期</p> <!-- 新增顯示期數的元素 -->
+    <p id="round">第 1 期</p> <!-- 顯示期數的元素 -->
   </div>
   <div class="tabs">
     <div class="tab active" data-tab="main">主頁</div>
@@ -21,7 +21,7 @@
   </div>
   <div class="content history">
     <h2>往期開獎資訊</h2>
-    <!-- 您可以在這裡顯示往期的開獎資訊 -->
+    <div id="history"></div> <!-- 顯示歷史開獎結果 -->
   </div>
   <script src="renderer.js"></script>
 </body>
