--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
   <div class="header">
-    <h1>湯姆熊大樂透</h1>
-    <p>選號區間: 0 - 1000 (取 6 碼)</p>
-    <p id="round">第 1 期</p> <!-- 顯示期數的元素 -->
+    <h1>大樂透程式</h1>
+    <p id="current-settings">選號區間: 0 - 1000，開獎碼數: 6</p>
+    <p id="round">第 1 期</p>
   </div>
   <div class="tabs">
     <div class="tab active" data-tab="main">主頁</div>
     <div class="tab" data-tab="history">往期開獎資訊</div>
+    <div class="tab" data-tab="settings">設置參數</div>
   </div>
   <div class="content main active">
     <button id="generate">選號並開獎</button>
@@ -21,7 +22,15 @@
   </div>
   <div class="content history">
     <h2>往期開獎資訊</h2>
-    <div id="history"></div> <!-- 顯示歷史開獎結果 -->
+    <div id="history"></div>
+  </div>
+  <div class="content settings">
+    <h2>設置參數</h2>
+    <label for="max-number">選號區間最大值:</label>
+    <input type="number" id="max-number" value="1000"><br>
+    <label for="draw-count">開獎碼數:</label>
+    <input type="number" id="draw-count" value="6"><br>
+    <button id="apply-settings">應用</button>
   </div>
   <script src="renderer.js"></script>
 </body>
