--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>大樂透程式</title>
+  <title>大樂透</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <div class="header">
-    <h1>大樂透程式</h1>
+    <h1>湯姆熊大樂透</h1>
     <p id="current-settings">選號區間: 0 - 1000，開獎碼數: 6</p>
     <p id="round">第 1 期</p>
   </div>
@@ -31,6 +31,14 @@
     <label for="draw-count">開獎碼數:</label>
     <input type="number" id="draw-count" value="6"><br>
     <button id="apply-settings">應用</button>
+  </div>
+  <div id="password-modal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <p>請輸入密碼</p>
+      <input type="password" id="password-input">
+      <button id="submit-password">提交</button>
+    </div>
   </div>
   <script src="renderer.js"></script>
 </body>
